# filecat

./: .gitignore  AGENTS.md  PC端桌面图标配置.md  README.md  build_linux.sh  build_winodws.bat  init_github.bat  init_github.sh  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/windcloud/flutter_rust/: MainActivity.java
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/constants/: app_colors.dart  app_styles.dart  app_translations.dart
lib/src/controllers/: home_controller.dart
lib/src/models/: file_item.dart
lib/src/pages/: home_page.dart
lib/src/routes/: app_pages.dart
lib/src/rust/: rust_bridge.dart
lib/src/utils/: file_utils.dart
lib/src/widgets/: copy_button.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
