[package]
name = "filecat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
actix-web = "4.11.0"
actix-files = "0.6.8"
actix-rt = "2.10.0"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.5"